# lgtv_control

./: .gitignore  README.md  inspect_client.py  install_hooks.sh  lgtv-control.service  lgtv_control.py  lgtv_on.py  lgtv_sleep.sh  pyproject.toml  test_suite.sh
