[project]
name = "lgtv-control"
version = "0.1.0"
description = "Control LG WebOS TV power state from Linux"
requires-python = ">=3.12"
dependencies = [
    "aiowebostv>=0.4.0",
    "wakeonlan>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
